# RustLLMLongevity

./: .env  Cargo.toml  README.md  client.py  docker-compose.yml  example_impl.rs  example_impl.rs.temp  instructions.md  readme_sample_chat_tcp.md  rocket_rust_backend.md
src/: app.rs  client.rs  codec.rs  config.rs  db.rs  main.rs  qdrant.rs  server.rs  session.rs
src/routes/: health.rs  mod.rs  search.rs
src/utils/: mod.rs
static/: index.html
