[package]
name = "websocket-tcp-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"  # or your installed version (optional but recommended)

[[bin]]
name = "websocket-tcp-server"
path = "src/main.rs"

[[bin]]
name = "websocket-tcp-client"
path = "src/client.rs"

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4"

byteorder = "1.2"
env_logger = "0.11"
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = "0.7"

